[gd_scene load_steps=7 format=3 uid="uid://cqdx8v52orko8"]

[ext_resource type="Script" path="res://shop_menu.gd" id="1_8s01u"]
[ext_resource type="Texture2D" uid="uid://nfptbkq5i1d0" path="res://Assets/foods/pizza.png" id="1_neeaw"]
[ext_resource type="Texture2D" uid="uid://bf0kg3k5hmgky" path="res://Assets/foods/burger.png" id="2_23gbg"]
[ext_resource type="Texture2D" uid="uid://be5wy4jvsk3a5" path="res://Assets/foods/doner.png" id="3_qye2x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3nkn"]
bg_color = Color(0, 0, 0, 0.635294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qgqcy"]
bg_color = Color(0.701961, 0, 0, 0.254902)

[node name="ShopMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8s01u")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u3nkn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qgqcy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -149.0
offset_right = 149.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 80

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Buyable Count = "

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[node name="PizzaRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 180

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PizzaRow"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PizzaIcon" type="TextureRect" parent="VBoxContainer/PizzaRow/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_neeaw")

[node name="PizzaCount" type="Label" parent="VBoxContainer/PizzaRow/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PizzaRow"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IncButton" type="Button" parent="VBoxContainer/PizzaRow/HBoxContainer2"]
layout_mode = 2
text = "+"

[node name="DecButton" type="Button" parent="VBoxContainer/PizzaRow/HBoxContainer2"]
layout_mode = 2
text = "-"

[node name="BurgerRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 180

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BurgerRow"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BurgerIcon" type="TextureRect" parent="VBoxContainer/BurgerRow/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_23gbg")

[node name="BurgerCount" type="Label" parent="VBoxContainer/BurgerRow/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/BurgerRow"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IncButton" type="Button" parent="VBoxContainer/BurgerRow/HBoxContainer2"]
layout_mode = 2
text = "+"

[node name="DecButton" type="Button" parent="VBoxContainer/BurgerRow/HBoxContainer2"]
layout_mode = 2
text = "-"

[node name="DonerRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 180

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/DonerRow"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="DonerIcon" type="TextureRect" parent="VBoxContainer/DonerRow/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_qye2x")

[node name="DonerCount" type="Label" parent="VBoxContainer/DonerRow/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/DonerRow"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IncButton" type="Button" parent="VBoxContainer/DonerRow/HBoxContainer2"]
layout_mode = 2
text = "+"

[node name="DecButton" type="Button" parent="VBoxContainer/DonerRow/HBoxContainer2"]
layout_mode = 2
text = "-"

[node name="ActionButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 15

[node name="ResetButton" type="Button" parent="VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Reset"

[node name="BuyButton" type="Button" parent="VBoxContainer/ActionButtons"]
layout_mode = 2
text = "Buy"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PizzaRow/HBoxContainer2/IncButton" to="." method="_on_pizza_inc_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PizzaRow/HBoxContainer2/DecButton" to="." method="_on_pizza_dec_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BurgerRow/HBoxContainer2/IncButton" to="." method="_on_burger_inc_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BurgerRow/HBoxContainer2/DecButton" to="." method="_on_burger_dec_button_pressed"]
[connection signal="pressed" from="VBoxContainer/DonerRow/HBoxContainer2/IncButton" to="." method="_on_doner_inc_button_pressed"]
[connection signal="pressed" from="VBoxContainer/DonerRow/HBoxContainer2/DecButton" to="." method="_on_doner_dec_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ActionButtons/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ActionButtons/BuyButton" to="." method="_on_buy_button_pressed"]
